# backend_challenges

./: .gitignore  README.md
01_course_platform/: README.md  alembic.ini  justfile  main.py  pyproject.toml
01_course_platform/data/: env.py
01_course_platform/data/versions/: 92fc1e416d49_migration_description.py  a53784d11c8e_migration_description.py  e4269c1786e4_migration_description.py
01_course_platform/scripts/: create_db.py
01_course_platform/src/: main.py
01_course_platform/src/config/: settings.py
01_course_platform/src/core/: service.py
01_course_platform/src/exceptions/: exceptions.py
01_course_platform/src/http/: dtos.py
01_course_platform/src/persistence/: database.py  models.py  repository.py
01_course_platform/src/utils/: validation.py
